--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -1,12 +1,12 @@
 ---
 title: "Brownlows Bets"
-author: "Your Name Goes Here"
+author: "Matt Diaz"
 output: 
   html_document:
     number_sections: true
     toc: true
     toc_depth: 5
-date: "`r Sys.Date()`"    
+date: " 4/3/24"    
     
 ---
 ```{r setup, include=FALSE}
